BUGFIX: Adjusted zoom for canvas renderer to avoid clipping content beyond 100%

--- a/extras/renderers/canvas/styles.css
+++ b/extras/renderers/canvas/styles.css
@@ -123,6 +123,15 @@
     background-color: #f5f5f5;
 }
 
+.canvas-virtual-inner {
+    width: 100%;
+}
+
+.canvas-virtual-wrapper {
+    background-color: #f5f5f5;
+    width: 100%;
+}
+
 .canvas-renderer-viewer {
     min-height: 100%;
     width: 100%;
@@ -131,6 +140,7 @@
     align-items: center;
     padding: 10px 0;
     box-sizing: border-box;
+    background-color: #f5f5f5;
 }
 
 .canvas-page {
@@ -141,6 +151,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .canvas-page-canvas {
